# maestro

./: .gitignore  17-REVIEW-FIX.md  17-REVIEW.md  AGENTS.md  README.md  REVIEW.md  SECURITY.md  hello.py  pyproject.toml  run-phase.sh  script.py
.github/workflows/: planning-consistency.yml
.planning/: DEPENDENCY_ANALYSIS.md  MILESTONE-WORKFLOW.md  PROJECT.md  PROMPT_ENGINEERING_SESSION.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  TECH-DEBT-REGISTER.md  config.json  v1.0-MILESTONE-AUDIT.md  v1.1-MILESTONE-SUMMARY.md  v1.2-MILESTONE-AUDIT.md  v1.2-MILESTONE-SUMMARY.md
.planning/codebase/: ARCHITECTURE.md  ASSUMPTIONS.md  FILES.txt  FINDINGS.md  INTEGRATIONS.md  MAP.md  (+3 more)
.scannerwork/: report-task.txt
docs/: 2026-04-23-maestro-flow-diagnosis.md  2026-04-25-session-memory.md  Matriz_formal_de_dependência_v2.md
graphify-out/: graph.html  graph.json
maestro/: __init__.py  agent.py  auth.py  cli.py  config.py  domains.py  models.py  multi_agent.py  planning.py  tools.py
maestro.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
spec/: 01-briefing.md
tests/: test_agent_loop.py  test_agent_loop_provider.py  test_aggregator.py  test_aggregator_guardrails.py  test_auth_browser_oauth.py  test_auth_store.py  test_chatgpt_provider.py  test_cli.py  test_cli_auth.py  test_cli_discover.py  test_cli_models.py  test_cli_planning.py  test_config.py  test_copilot_provider.py  test_copilot_smoke.py  test_dashboard_emitter.py  test_dashboard_integration.py  test_dashboard_server.py  test_domains.py  test_model_resolution.py  test_multi_agent_cli.py  test_planner_node.py  test_planner_prompt.py  test_planner_schemas.py  test_planning_consistency.py  test_provider_install_smoke.py  test_provider_protocol.py  test_provider_registry.py  test_scheduler_workers.py  test_sdlc_gaps_server.py  test_sdlc_generators.py  test_sdlc_harness.py  test_sdlc_reflect.py  test_sdlc_reviewer.py  test_sdlc_schemas.py  test_sdlc_sprints.py  test_sdlc_writer.py  test_tools.py
tests/fixtures/hello_provider/: hello_provider.py  pyproject.toml
tmp/: gaps-snapshot.txt
(+220 files in other folders)
