[project]
name = "maestro"
version = "0.1.0"
description = "LangGraph agent using ChatGPT Plus/Pro subscription via OAuth2"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.4",
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "httpx>=0.27",
]

[project.scripts]
maestro = "maestro.cli:main"
