[project]
name = "maestro"
version = "0.1.0"
description = "LangGraph agent using ChatGPT Plus/Pro subscription via OAuth2"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.4",
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "httpx>=0.27",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
maestro = "maestro.cli:main"

[project.entry-points."maestro.providers"]
chatgpt = "maestro.providers.chatgpt:ChatGPTProvider"
github-copilot = "maestro.providers.copilot:CopilotProvider"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests requiring real credentials (opt-in via MAESTRO_RUN_INTEGRATION=1)",
]
